[package]
name = "voronoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
image = "0.23"
structopt = "0.3"
indicatif = {version = "0.16", features = ["rayon"]}
rand = "0.8"
rayon = "1.5"
itertools = "0.10"
