[package]
name = "voronoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
overflow-checks = false

[dependencies]
image = "0.23"
indicatif = {version = "0.16", features = ["rayon"]}
itertools = "0.10"
rand = "0.8"
rayon = "1.5"
structopt = "0.3"
